# docs/swagger.json
@@ -380,8 +380,13 @@
                 }
             }
         },
-        "/marketplace/skins/remove": {
-            "get": {
+        "/marketplace/skins/{skin_id}": {
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Remove a user's skin from listing",
                 "produces": [
                     "application/json"
@@ -395,7 +400,7 @@
                         "type": "string",
                         "description": "Skin ID to remove from listing",
                         "name": "skin_id",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
